# aoe2dat

./: .gitignore  .gitmodules  README.md  build.bat  setup.bat
code/: CMakeLists.txt  aoe2dat.cpp  vcpkg.json
